Clean up code and formatting.

--- a/src/main/Resources/Templates/disasterdetails.html
+++ b/src/main/Resources/Templates/disasterdetails.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Title -->
-    <title>Re.Leaf || Home Page</title>
+    <title>Re.Leaf || Cause Details</title>
 
     <!-- ================================================================
         ***Favicon***
@@ -213,7 +213,7 @@
     <div class="container">
         <div class="row ">
             <div class="col-md-8 col-md-offset-1 col-sm-9">
-                <h2>Lets make the world better together.</h2>
+                <h2>Let's make the world better together.</h2>
             </div>
             <!-- column End -->
             <div class="col-sm-3">
