--- a/src/main/Resources/Templates/index.html
+++ b/src/main/Resources/Templates/index.html
@@ -150,7 +150,6 @@
             <div class="col-xs-12">
                 <div class="romana_section_title text-center">
                     <h2>Global Causes</h2>
-                    <p>These are the most recent causes in need of Re.Leaf.</p>
                 </div>
             </div>
             <!-- column End -->
@@ -200,7 +199,7 @@
             <div class="container">
                 <div class="row ">
                     <div class="col-md-8 col-md-offset-1 col-sm-9">
-                        <h2>Lets make the world better together.</h2>
+                        <h2>Let's make the world better together.</h2>
                     </div>
                     <!-- column End -->
                     <div class="col-sm-3">
