--- a/src/main/Resources/static/css/style.css
+++ b/src/main/Resources/static/css/style.css
@@ -227,7 +227,7 @@ h3 {
 .romana_section_title {
   margin: 0 auto;
   max-width: 440px;
-  padding-bottom: 64px;
+  padding-bottom: 50px;
   font-size: 15px; }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .romana_section_title {
@@ -269,6 +269,24 @@ h3 {
   height: 156px;
   padding-top: 14px;
   resize: none; }
+
+.donation_input input, .donation_input select, .donation_input textarea {
+  background: #f9f9f9;
+  border: 1px solid #e9e9e9;
+  height: 50px;
+  margin-bottom: 2px;
+  padding: 10px 20px;
+  width: 200%;
+  font-size: 15px;
+  border-radius: 3px;
+  color: #5a5a5a; }
+.donation_input input:focus, .donation_input select:focus, .donation_input textarea:focus {
+  border: 1px solid #19b968; }
+.donation_input textarea {
+  height: 156px;
+  padding-top: 14px;
+  resize: none; }
+
 
 label {
   font-size: 15px;
@@ -2598,12 +2616,12 @@ body {
     margin-bottom: 35px;
     padding-bottom: 18px;
     position: relative; }
-    .contact_form h3:after {
-      width: 66px;
-      background: #19b968;
-      height: 3px;
-      top: auto;
-      bottom: 0; }
+    /*.contact_form h3:after {*/
+      /*width: 66px;*/
+      /*background: #19b968;*/
+      /*height: 3px;*/
+      /*top: auto;*/
+      /*bottom: 0; }*/
   .contact_form .common_btn {
     margin-top: 30px;
     border: none; }
@@ -2613,6 +2631,9 @@ body {
     height: 160px; }
   .contact_form label {
     margin-bottom: 12px; }
+
+.volunteer_form textarea {
+  height: 310px; }
 
 /* ==============================================================================================
     ************** Preloder Css start ******************
