Catching last little things to tweak.

--- a/src/main/Resources/Templates/donation.html
+++ b/src/main/Resources/Templates/donation.html
@@ -175,20 +175,19 @@
 <!-- ==========================================================
 *romana_cta_area start
 ============================================================ -->
-<div class="romana_cta_area">
+<div class="romana_cta_area mt66">
     <div class="container">
         <div class="row ">
             <div class="col-md-8 col-md-offset-1 col-sm-9">
-                <h2>Lest make the world better togethers.</h2>
+                <h2>Let's make the world better together.</h2>
             </div>
             <!-- column End -->
             <div class="col-sm-3">
-                <a href="volunteer.html" class="hvr-box-shadow-outset common_btn">join with us<i
+                <a th:href="@{/volunteer}" class="hvr-box-shadow-outset common_btn">Become A Volunteer<i
                         class="fa fa-long-arrow-right"></i></a>
             </div>
             <!-- column End -->
         </div>
-        <!-- row End -->
     </div>
 </div>
 <!-- ==================================================
