--- a/src/main/Resources/Templates/volunteer.html
+++ b/src/main/Resources/Templates/volunteer.html
@@ -141,7 +141,7 @@
             <div class="col-md-5 recent_volunteers">
                 <br>
                 <br>
-                <h2>Recent Volunteers...</h2>
+                <h2>Most Recent Volunteers...</h2>
                 <br>
 
                 <ul th:each="volunteer : ${topFiveVolunteers}">
